# qutemu

./: README.md
MATLAB/: CleanupStim.m  README.md  app.mlapp  apply_atria.m  apply_fibrosis.m  apply_field.m  fibrosis.m  load_results.m
MATLAB/perlin/: find_level.m  octave.m  perlin.m  seed_octave.m  seed_perlin.m
MATLAB/tetgen/: LoadEleIndices.m  LoadNodeCoords.m
chaste/: README.md
chaste/qutemu/: CMakeLists.txt
chaste/qutemu/apps/: CMakeLists.txt
chaste/qutemu/apps/src/: AtrialFibrosis.cpp  SlabSimulation.cpp
chaste/qutemu/src/: ActivationMapOutputModifier.cpp  ActivationMapOutputModifier.hpp  ConductivityReader.cpp  ConductivityReader.hpp  FibrosisReader.cpp  FibrosisReader.hpp  QutemuLog.cpp  QutemuLog.hpp  QutemuVersion.hpp  SlabSimulation.hpp  TimedStimulus.cpp  TimedStimulus.hpp  UpdateBuildTime.cmake
chaste/qutemu/src/cellml/: BeelerReuter1977.cellml  Maleckar2008_LA_1h2Hz.cellml  Maleckar2008_RA_1h2Hz.cellml  Maleckar2008_base.cellml  Maleckar2008_cAF.cellml  ORd.cellml  ORd2011endo_fkatp.cellml  beeler_reuter_1977_modifytest.cellml  courtemanche_ramirez_nattel_1998_SR.cellml  courtemanche_ramirez_nattel_1998_cAF.cellml
chaste/qutemu/test/: CMakeLists.txt  ContinuousTestPack.txt  TestBasicMonodomainMesh.hpp
pyscripts/: add_fibrosis.py  add_hdf5.py
pyscripts/paraview_macros/: export_screenshots.py  qutemu_colours.py
